load("@io_bazel_rules_docker//container:container.bzl", "docker_build", "oci_push")

# Build the Docker image from the checked‑in Dockerfile.
# MODEL_NAME and LORA_NAME get passed in via --define on the bazel command line,
# and then injected as --build-arg MODEL_NAME=... into the docker build.
docker_build(
    name       = "custom_image",
    dockerfile = "Dockerfile",
    directory  = ".",
    build_args = {
        "MODEL_NAME": "$(MODEL_NAME)",
        "LORA_NAME":  "$(LORA_NAME)",
    },
)

# Push it up under your Docker Hub repo
oci_push(
    name        = "push_custom_image",
    image       = ":custom_image",
    repository  = "index.docker.io/${DOCKER_USER}/worker-vllm-lora",
    remote_tags = ["latest"],
)
